--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="hearts"></div>
+<div class="sparkles"></div>
     <div class="container">
-        <h1>Will you be my Valentine?</h1>
+        <h1><div class="couple">💑</div>
+            Will you be my Valentine?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
